# SD

./: CMakeLists.txt  README.md  analisar_resultados.py  gerar_relatorio.sh  grafico.py  parallel.c  relatorio_experimentos.txt  rename.sh  run_experimentos.py  run_experimentos.sh  run_experimentos_paralelos.sh  run_experimentos_sequenciais.sh  sequential.c
src/: mpi_saco.c  mpi_saltos.c  seq_primos.c
